ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail4.ligo
type myt is Nil | Cons of (int * int)

function t (const x: myt * myt) is
  case x of
  | (Nil , ys)  -> 1
  | (xs  , Nil) -> 2
  end